--- a/MatrixLibrary/MatrixLibrary.csproj
+++ b/MatrixLibrary/MatrixLibrary.csproj
@@ -66,7 +66,7 @@
     <Compile Include="matrix_operations.cs" />
     <Compile Include="matrix.cs" />
     <Compile Include="matice_rozklady.cs" />
-    <Compile Include="matice_upravit.cs" />
+    <Compile Include="matrix_alter.cs" />
     <Compile Include="matice_vlastnosti.cs" />
     <Compile Include="matice_vypocty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
