--- a/MatrixLibrary/MatrixLibrary.csproj
+++ b/MatrixLibrary/MatrixLibrary.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\MatrixLibrary.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,6 +44,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\x64\Debug\MatrixLibrary.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -64,14 +66,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="matrix_characteristics.cs" />
-    <Compile Include="matrix_number.cs" />
-    <Compile Include="matrix_operations.cs" />
-    <Compile Include="matrix.cs" />
-    <Compile Include="matrix_decompositions.cs" />
-    <Compile Include="matrix_alter.cs" />
-    <Compile Include="matrix_properties.cs" />
-    <Compile Include="matrix_computation.cs" />
+    <Compile Include="Characteristics.cs" />
+    <Compile Include="MatrixNumber.cs" />
+    <Compile Include="ClassicOperations.cs" />
+    <Compile Include="Matrix.cs" />
+    <Compile Include="Decompositions.cs" />
+    <Compile Include="AlteringOperations.cs" />
+    <Compile Include="Properties.cs" />
+    <Compile Include="Computations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
